tests/paczka1/small_fuzzy/32203493.err
Error in line 4: JKG A247 11,8
Error in line 6: OiXCk S661 172,1
Error in line 14: S795 S661 10,3
